fix: #231 Align menu items from sidebar

--- a/src/app/modules/shared/components/sidebar/sidebar.component.scss
+++ b/src/app/modules/shared/components/sidebar/sidebar.component.scss
@@ -35,6 +35,18 @@
   }
 }
 
+.container {
+  display: grid;
+  grid-gap: 20px;
+  justify-content: center;
+  align-self: center;
+  .item {
+    display: grid;
+    grid-template-columns: 30px 100px;
+    align-items: center;
+  }
+}
+
 @media (min-width: 768px) {
   #wrapper {
     #sidebar-wrapper {
